Remove new note quick actions from layouts

--- a/1.5.2
+++ b/1.5.2
@@ -454,6 +454,66 @@
           }
         }
       ]
+    },
+    {
+      "sObjectName": "Lead",
+      "instructionTypeName": "Lead (Marketing) Layout",
+      "taskList": [
+        {
+          "jiraTicket": "ac-46595x4",
+          "description": "Remove standard New note from quick actions",
+          "actionType": "QuickAction",
+          "actionTypeName": "FeedItem.ContentNote",
+          "optionsMap": {
+            "operation": "remove"
+          }
+        }
+      ]
+    },
+    {
+      "sObjectName": "Lead",
+      "instructionTypeName": "Lead (Sales) Layout",
+      "taskList": [
+        {
+          "jiraTicket": "ac-46595x5",
+          "description": "Remove standard New note from quick actions",
+          "actionType": "QuickAction",
+          "actionTypeName": "FeedItem.ContentNote",
+          "optionsMap": {
+            "operation": "remove"
+          }
+        }
+      ]
+    },
+    {
+      "sObjectName": "Lead",
+      "instructionTypeName": "Lead (Support) Layout",
+      "taskList": [
+        {
+          "jiraTicket": "ac-46595x5",
+          "description": "Remove standard New note from quick actions",
+          "actionType": "QuickAction",
+          "actionTypeName": "FeedItem.ContentNote",
+          "optionsMap": {
+            "operation": "remove"
+          }
+        }
+      ]
+    },
+    {
+      "sObjectName": "Lead",
+      "instructionTypeName": "Lead Layout",
+      "taskList": [
+        {
+          "jiraTicket": "ac-46595x6",
+          "description": "Remove standard New note from quick actions",
+          "actionType": "QuickAction",
+          "actionTypeName": "FeedItem.ContentNote",
+          "optionsMap": {
+            "operation": "remove"
+          }
+        }
+      ]
     }
   ]
 }
