remove new note button from platform actions on standard lead layout

--- a/1.5.2
+++ b/1.5.2
@@ -185,8 +185,27 @@
       "description": "Remove Platform actions from Layout",
       "taskList": [
         {
-          "jiraTicket": "ac-46595j",
-          "description": "Remove standard New note from  layout Mobile and Lightning Actions section",
+          "jiraTicket": "ac-46595j1",
+          "description": "Remove standard New note from layout Mobile and Lightning Actions section",
+          "actionType": "PlatformAction",
+          "actionTypeName": "nothing",
+          "optionsMap": {
+            "platformActionType": "QuickAction",
+            "platformActionName": "FeedItem.ContentNote",
+            "platformActionListContext": "Record",
+            "operation": "remove"
+          }
+        }
+      ]
+    },
+    {
+      "sObjectName": "Lead",
+      "instructionTypeName": "Lead Layout",
+      "description": "Remove Platform actions from Layout",
+      "taskList": [
+        {
+          "jiraTicket": "ac-46595j2",
+          "description": "Remove standard New note from layout Mobile and Lightning Actions section",
           "actionType": "PlatformAction",
           "actionTypeName": "nothing",
           "optionsMap": {
